1-k8s/7-ingress.yaml

# apiVersion: networking.k8s.io/v1
# # apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: example-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     # - host: hello-world.info
#     - host: jain.com
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: nodeapp-service
#                 port:
#                   number: 5000


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp-service
                port:
                  number: 5000
    # # - host: jain.hello-world.info
    # - host: jain.jain.com
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: nodeapp2-service
    #             port:
    #               number: 5000
          # - path: /v2
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: nodeapp2-service
          #       port:
          #         number: 5000

# echo "$(minikube ip) jain.com" | sudo tee -a /etc/hosts
# cat /etc/hosts | tail -n 5

# minikube addons enable ingress
# minikube tunnel
